# embed_text

./: .gitignore  CMakeLists.txt  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: embed_text_extension.cpp
src/include/: embed_text_extension.hpp
test/sql/: embed_text.test
